--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-06-04  Markus Rollmann  <rollmark@uni-koblenz.de>
+	* lib/zeitgeist/zeitgeist.dsp
+	added class_m.h to the VC project file
+
+	* lib/keorsin/imageserver/imageserver.h
+	replaced #include<leaf.h> in imageserver.h with 
+	#include<zeitgeist/class.h>
+	
 2003-06-03  Oliver Obst  <fruit@robolog.org>
 
 	* lib/zeitgeist/scriptserver/scriptserver.h: 
