--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-06-22  Markus Rollmann  <rollmark@uni-koblenz.de>
+	* app/
+	- replaced files in app/ directory with the latest version of the
+	original author (Marco Kögler)
+	- added missing projects to the vc app.dsw workspace and tested
+	the projects
+
 2003-06-04  Markus Rollmann  <rollmark@uni-koblenz.de>
 	* lib/zeitgeist/zeitgeist.dsp
 	added class_m.h to the VC project file
