--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-22  Markus Rollmann  <rollmark@uni-koblenz.de>
+	* /lib/salt/
+	- removed ptr.h ptrmanager.h and quadlink.h from Makefile.am
+	- added gcc/sharedlibrary.cpp to Makefile.am
+	
 2003-08-21  Markus Rollmann  <rollmark@uni-koblenz.de>
 	* /lib/salt /lib/zeitgeist
 	- added comments and gpl headers to the salt and zeitgeist libraries
