--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-30  Markus Rollmann  <rollmark@uni-koblenz.de>
+	* ./lib/oxygen/physicsserver/
+	- added copyleft and some comments
+
 2003-08-28  Markus Rollmann  <rollmark@uni-koblenz.de>
 	* ./lib/kerosin/agentaspect/perceptor_c.cpp
 	* ./lib/kerosin/openglserver/glextensionreg.cpp
