--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-09-08  Markus Rollmann  <rollmark@uni-koblenz.de>
+	* lib/kerosin/renderserver/
+	* lib/kerosin/sceneserver/
+	* lib/oxygen/sceneserver/
+	- moved OpenGl camera setup code to the renderserver
+	- kerosin::Camera now 
+	
+	* lib/salt/matrix.cpp
+	- removed some unused variables
+
 2003-09-08	Tom Howard	<tomhoward@users.sf.net>
 
 	* ./configure.ac
