--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,24 @@
 2003-09-10	Tom Howard	<tomhoward@users.sf.net>
 
+	* ./lib/kerosin/openglserver/openglserver.cpp
+	* ./lib/kerosin/openglserver/openglserver.h
+	* ./lib/kerosin/sceneserver/light.cpp
+	* ./lib/kerosin/sceneserver/light.h
+	* ./lib/oxygen/agentaspect/effector.cpp
+	* ./lib/oxygen/agentaspect/forceeffector.cpp
+	* ./lib/salt/fileclasses.cpp
+	* ./lib/salt/fileclasses.h
+	* ./lib/salt/path.h
+	* ./lib/zeitgeist/fileserver/fileserver.cpp
+	Removed warnings re double defs.
+
+	Removed warnings about unused params
+
+	Removed warnings about unued static function
+	
+
+2003-09-10	Tom Howard	<tomhoward@users.sf.net>
+
 	* ./config.aux/cvs.am
 	Removed obsolete addlog target
 2003-09-09  Markus Rollmann  <rollmark@uni-koblenz.de>
